--- a/style.css
+++ b/style.css
@@ -56,8 +56,11 @@ body {
   background-color: var(--color);
   color: white;
 }
-/* .mynavbar {
-} */
+.mynavbar {
+  /* background-color: rgba(8, 189, 221, 0.514) !important;
+  backdrop-filter: blur(4px); */
+  background-image: url(img/bg-navbar-pink.png);
+}
 .mynavbar .navbar-brand,
 .mynavbar .offcanvas-title {
   font-family: "Satisfy", cursive;
@@ -66,14 +69,79 @@ body {
 .mynavbar .nav-link {
   text-transform: uppercase;
 }
-/* .home {
-  display: flex;
-  justify-items: center;
-  background-image: url(img/wedding1.jpg);
+.home,
+.info {
+  background-image: url(img/bg-navbar-pink.png);
   background-size: cover;
-  min-height: 100vh;
-} */
+  min-height: 80vh;
+}
+.home h2,
+.info h2 {
+  font-family: "Satisfy", cursive;
+  font-size: 5rem;
+  font-weight: bold;
+  padding-bottom: 5px;
+}
+.home h3 {
+  font-size: 1.1rem;
+  margin-bottom: 1rem;
+}
+.home p {
+  font-size: 1.1rem;
+}
+.home .couple {
+  margin-top: 100px;
+}
+.home .couple h3 {
+  font-family: "Satisfy", cursive;
+  font-size: 2.4rem;
+}
+.home .couple img {
+  width: 100%;
+}
+.home .heart {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) translateY(65px);
+}
+.home .heart i {
+  margin: auto;
+}
+.info .alamat {
+  font-size: 1.1rem;
+}
+
+.info .deskripsi {
+  font-size: 1rem;
+  font-weight: 300;
+}
+.info .card {
+  /* background-color: rgba(255, 255, 255, 0.2) !important; */
+  background-image: url(img/bg-navbar-pink.png);
+  border: 1px solid #999;
+}
+.info .card-header {
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+}
+.info .card-body {
+  font-size: 1rem;
+}
+.info .card-footer {
+  border-bottom: 1px solid #999;
+  font-size: 0.9rem;
+  font-weight: 400;
+}
 /*Media Query*/
+/* Extra Large */
+@media (max-width: 1200px) {
+  .home .heart {
+    transform: translateX(-50%) translateY(45px);
+  }
+}
 /*Laptop*/
 @media (max-width: 992px) {
   html {
@@ -81,6 +149,9 @@ body {
   }
   .simply-countdown > .simply-section {
     padding: 70px;
+  }
+  .home .heart {
+    display: none;
   }
 }
 
